# eyrc_luminosity_drone

./: .gitmodules  LD_2000_led_detection.py  LD_2000_led_detection_results.txt
luminosity_drone/luminosity_drone/launch/: bridge.yaml  task_1_submission.launch  task_2a_submission.launch  task_2b_submission.launch  task_2c_submission.launch  usb_cam.launch  whycon.launch
luminosity_drone/luminosity_drone/scripts/: 98_LD_2000_life_form_detector.bag  LD_2000_biota_detector.bag  LD_2000_biota_detector.py  LD_2000_biota_detector_do_it.py  LD_2000_led_detection_results.txt  LD_2000_life_form_detector.bag  LD_2000_life_form_detector.py  LD_2000_position_hold.bag  LD_2000_position_hold.py  LD_2000_waypoint_navigation.bag  LD_2000_waypoint_navigation.py  biota_detector.bag  biota_detector.py  led_detection.py  life_form_detector.bag  position_hold.bag  position_hold.py  scan.py  waypoint_navigation.bag
luminosity_drone/swift_simulator/: .gitmodules
luminosity_drone/swift_simulator/rotors_gazebo_plugins/: CMakeLists.txt
luminosity_drone/swift_simulator/rotors_swift_interface/: CMakeLists.txt  package.xml
luminosity_drone/swift_simulator/rotors_swift_interface/src/: swift_trans.cpp
luminosity_drone/swift_simulator/swift_msgs/: CMakeLists.txt  package.xml
luminosity_drone/whycon/: README.md
luminosity_drone/whycon/launch/: whycon.launch
pid_tune/scripts/: pid_tune_gui.py
scripts/: drone_position.py  position_hold.bag  position_hold.py
swift_simulator/rotors_description/urdf/: multirotor_base.xacro
(+19 files in other folders)
